# codex

./: AGENTS.md  CHANGED.md  MODULE.bazel  README.md
.agents/skills/codex-upstream-reapply/: SKILL.md
.agents/skills/status-header/: SKILL.md
.codex/: patch-stack.yaml
.github/workflows/: integration-artifact.yml  rust-release.yml
codex-rs/: Cargo.toml
codex-rs/app-server/: Cargo.toml  README.md
codex-rs/app-server/src/: bespoke_event_handling.rs  extensions.rs  lib.rs  message_processor.rs  request_processors.rs
codex-rs/cli/: Cargo.toml
codex-rs/cli/src/: main.rs  telemetry_cmd.rs  telemetry_cmd_report.rs  telemetry_cmd_tests.rs
codex-rs/cli/tests/: telemetry.rs
codex-rs/codex-api/src/: telemetry.rs
codex-rs/codex-client/src/: telemetry.rs
codex-rs/codex-mcp/src/: connection_manager_tests.rs  rmcp_client.rs
codex-rs/config/src/: config_toml.rs  permissions_toml.rs  types.rs
codex-rs/core/: Cargo.toml  config.schema.json
codex-rs/core-api/src/: lib.rs
codex-rs/core-plugins/: Cargo.toml
codex-rs/core-plugins/src/: loader.rs  manager.rs  tool_suggest_metadata.rs
codex-rs/core/src/: agents_md.rs  client.rs  codex_thread.rs  lib.rs  local_telemetry.rs  local_telemetry_tests.rs  thread_manager.rs
codex-rs/exec/: Cargo.toml
codex-rs/exec/src/: lib.rs  lib_tests.rs
codex-rs/ext/local-telemetry/: Cargo.toml
codex-rs/ext/local-telemetry/src/: extension.rs  extension_recording.rs  extension_tests.rs  lib.rs  state.rs  turn_items.rs
codex-rs/features/src/: lib.rs
codex-rs/http-client/src/: request.rs  route_aware_client_pool.rs
codex-rs/local-telemetry/: Cargo.toml  README.md
codex-rs/local-telemetry/src/: lib.rs  lib_tests.rs  paths.rs  privacy.rs  reader.rs  reader_tests.rs  rollup.rs  schema.rs  summary.rs  writer.rs
codex-rs/login/src/: lib.rs
codex-rs/otel/: README.md
codex-rs/tui/: Cargo.toml  tooltips.txt
(+150 files in other folders)
