[package]
name = "codex-local-telemetry"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_local_telemetry"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util"] }
