[package]
edition.workspace = true
license.workspace = true
name = "codex-local-telemetry-extension"
version.workspace = true

[lib]
name = "codex_local_telemetry_extension"
path = "src/lib.rs"
test = false
doctest = false

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }
codex-extension-api = { workspace = true }
codex-local-telemetry = { workspace = true }
codex-protocol = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
